--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "axios": "^1.8.4",
     "craco-less": "^3.0.1",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
